# qr_shirts

./: .env  Cargo.toml  README.md
docker/: docker-compose.yml
migrations/: schema.sql
src/: main.rs  redirect.rs
src/qr/: handler.rs  mod.rs  port.rs  service.rs  templates.rs
src/qr/adapters/: mongo.rs
src/shirt/: handler.rs  mod.rs  port.rs  service.rs
src/shirt/adapters/: mod.rs  mongo.rs  postgre.rs
src/user/: handler.rs  mod.rs  port.rs  service.rs
src/user/adapter/: postgre.rs
static/: update_form.html
static/css/: edit_page.css
static/css/page_templates/: profile.css  quote.css
static/js/: edit_page.js
static/js/page_templates/: profile.js
templates/page_templates/: base.html  profile.html  quote.html
