[package]
name = "qr_shirts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.61"

actix = "0.12"
actix-session = {version = "0.9.0", features = ["redis-rs-session"]}
actix-web = "4.0"

bcrypt = "0.10"
