[package]
name = "qr_shirts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
log = "0.4.21"
env_logger = "0.9"

actix = "0.12"
actix-session = {version = "0.9.0", features = ["redis-rs-session"]}
actix-web = "4.0"

bcrypt = "0.10"

sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "chrono", "uuid"] }
